--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<WebApp.Models.ConceptoModel>
-
-@Styles.Render("~/content/fileinput")
+﻿@Styles.Render("~/content/fileinput")
 @Scripts.Render("~/bundles/fileinput")
 
 <div class="container-fluid">
