--- a/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Planillas/Index.cshtml
@@ -138,7 +138,7 @@
                     { data: 'totalDescuentoFormat' },
                     { data: 'totalSueldoFormat' }
                 ],
-                "bStateSave": false,
+                bStateSave: false,
                 bDestroy: true,
                 lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
                 iDisplayLength: 5,
