--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -211,6 +211,7 @@
                         }
                     }
                 ],
+                bStateSave: false,
                 bDestroy: true,
                 lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Todas"]],
                 iDisplayLength: 10,
