Agregado columna código de concepto y filtro por tipo de concepto en el modal de Conceptos Asignados a Plantilla.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -125,8 +125,11 @@
                     },
                     success: function (result) {
                         if (result.success) {
-                            $("#fileName").val(result.data.Item1);
-                            generarDatatableValoresExternos(result.data.Item2);
+                            let fileName = result.data.Item1;
+                            let jsonData = result.data.Item2;
+
+                            $("#fileName").val(fileName);
+                            generarDatatableValoresExternos(jsonData);
                         } else {
                             toastr.error(result.message);
                         }
