--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanillaConcepto/_ConceptosAsignados.cshtml
@@ -48,6 +48,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th>Tip.Concepto</th>
+                        <th>Código</th>
                         <th>Descripción</th>
                         <th>Valor</th>
                         <th>Aplica a</th>
@@ -59,6 +60,7 @@
                 <tfoot>
                     <tr>
                         <th>Tip.Concepto</th>
+                        <th>Código</th>
                         <th>Descripción</th>
                         <th>Valor</th>
                         <th>Aplica a</th>
@@ -101,7 +103,7 @@
 
         Swal.fire({
             title: '',
-            text: '¿Desea anular este registro?',
+            text: '¿Desea eliminar este registro?',
             icon: MENSAJE.WARNING,
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
@@ -147,6 +149,7 @@
             },
             columns: [
                 { data: 'tipoConceptoDesc' },
+                { data: 'conceptoCod' },
                 { data: 'conceptoDesc' },
                 { data: 'valorConceptoFormateado' },
                 { data: 'descFiltro' },
@@ -219,7 +222,29 @@
                 loadingRecords: "Cargando...",
                 processing: "Procesando..."
             },
-            searching: true
+            searching: true,
+            initComplete: function () {
+                this.api().columns([0]).every(function () {
+                    let column = this;
+
+                    let select = document.createElement('select');
+                    select.add(new Option(''));
+                    column.footer().replaceChildren(select);
+
+                    select.addEventListener('change', function () {
+                        var val = $.fn.dataTable.util.escapeRegex(select.value);
+                        column.search(val ? '^' + val + '$' : '', true, false).draw();
+                    });
+
+                    column.data().unique().sort().each(function (d, j) {
+                        if (column.search() === '^' + d + '$') {
+                            select.add(new Option(d, d, true, true));
+                        } else {
+                            select.add(new Option(d, d));
+                        } 
+                    });
+                });
+            }
         });
     }
 
