Se agregó el mantenimiento de valores externos para conceptos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
@@ -42,7 +42,7 @@
             <div class="col-12">
                 <div class="form-group">
                     @Html.LabelFor(model => model.conceptoDesc, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => model.conceptoDesc, new { @class = "form-control" })
+                    @Html.TextAreaFor(model => model.conceptoDesc, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.conceptoDesc, null, new { @class = "text-danger" })
                 </div>
             </div>
