--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Index.cshtml
@@ -66,7 +66,7 @@
                             <th>Tip.Doc.</th>
                             <th>Num.Doc.</th>
                             <th>Apellidos y Nombres</th>
-                            <th>Categoria Planilla</th>
+                            <th>Planilla</th>
                             <th>Cod.Concepto</th>
                             <th>Descripción</th>
                             <th>Valor</th>
@@ -81,7 +81,7 @@
                             <th>Tip.Doc.</th>
                             <th>Num.Doc.</th>
                             <th>Apellidos y Nombres</th>
-                            <th>Categoria Planilla</th>
+                            <th>Planilla</th>
                             <th>Cod.Concepto</th>
                             <th>Descripción</th>
                             <th>Valor</th>
@@ -196,7 +196,7 @@
                     { data: 'tipoDocumentoID' },
                     { data: 'numDocumento' },
                     { data: 'datosPersona' },
-                    { data: 'categoriaPlanillaID' },
+                    { data: 'categoriaPlanillaDesc' },
                     { data: 'conceptoCod' },
                     { data: 'conceptoDesc' },
                     { data: 'valorConcepto' },
@@ -213,6 +213,12 @@
                         targets: 3,
                         render: function (data, type, row) {
                             return row.tipoDocumentoDesc + ' (' + row.tipoDocumentoID + ')';
+                        }
+                    },
+                    {
+                        targets: 6,
+                        render: function (data, type, row) {
+                            return row.categoriaPlanillaDesc + ' (' + row.categoriaPlanillaID + ')';
                         }
                     },
                     {
