--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
@@ -47,7 +47,7 @@
         </div>
 
         <div class="table-responsive mt-4" style="min-height:300px">
-            <table class="table table-hover" id="dataTablePlanilla" width="100%">
+            <table class="table table-hover" id="dataTableValoresExternos" width="100%">
                 <thead class="thead-dark">
                     <tr>
                         <th>Año</th>
@@ -60,6 +60,7 @@
                         <th>Descripción</th>
                         <th>Valor</th>
                         <th>Origen</th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
@@ -75,6 +76,7 @@
                         <th>Descripción</th>
                         <th>Valor</th>
                         <th>Origen</th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </tfoot>
@@ -112,6 +114,50 @@
 
                 generarDatatableInformacionExterna(anio, mes, idCategoria);
             });
+
+            $('#dataTableValoresExternos').on('click', '.btn-eliminar', function (event) {
+                event.preventDefault();
+
+                let id = $(this).data("id");
+                let token = $('input[name="__RequestVerificationToken"]').val();
+
+                Swal.fire({
+                    title: '',
+                    text: '¿Desea eliminar este registro?',
+                    icon: MENSAJE.WARNING,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Si, continuar.',
+                    cancelButtonText: 'No, cancelar.'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: '@Url.Action("Eliminar", "ValoresExternos")/' + id,
+                            type: "POST",
+                            data: { __RequestVerificationToken: token },
+                            beforeSend: function () {
+                            },
+                            success: function (data) {
+                                if (data.Success) {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
+
+                                    let anio = $("#frmConsultaInformacionExterna #anio").val();
+                                    let mes = $("#frmConsultaInformacionExterna #mes").val();
+                                    let idCategoria = $("#frmConsultaInformacionExterna #idCategoria").val();
+
+                                    generarDatatableInformacionExterna(anio, mes, idCategoria);
+                                } else {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
+                                }
+                            },
+                            error: function (jqXHR, textStatus, errorThrown) {
+                                $('#content-body').html('<p class="alert alert-danger">' + jqXHR.responseText + '</p>');
+                            }
+                        });
+                    }
+                });
+            });
         });
 
         function generarDatatableInformacionExterna(anio, mes, idCategoria) {
@@ -121,7 +167,7 @@
                 idCategoria: idCategoria
             };
 
-            $('#dataTablePlanilla').DataTable({
+            $('#dataTableValoresExternos').DataTable({
                 ajax: {
                     'url': '@Url.Action("ObtenerListaInformaciónExterna", "ValoresExternos")',
                     'data': parametros,
@@ -138,15 +184,24 @@
                     { data: 'conceptoDesc' },
                     { data: 'valorConcepto' },
                     { data: 'proveedorDesc' },
+                    { data: 'conceptoExternoValorID' },
                     { data: 'conceptoExternoValorID' }
                 ],
                 columnDefs: [
                     {
-                        targets: -1,
+                        targets: -2,
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="modal-link" href="@Url.Action("Editar", "ValoresExternos")/${data}` +
-                                '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                                '" title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>';
+                        }
+                    },
+                    {
+                        targets: -1,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="btn-eliminar" href="#" data-id="${data}"` +
+                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i></a>';
                         }
                     }
                 ],
